force-app/main/default/objects/FEC_Stage_Screen__c/FEC_Stage_Screen__c.object-meta.xml
<CustomObject>
    <description>Quản lý màn hình các giai đoạn (Stage) của từng quy trình xử lý</description>
    <label>Stage Screen</label>
    <nameField>
        <displayFormat>SSN-{0}</displayFormat>
        <label>Stage Screen Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Screens</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>