force-app/main/default/objects/FEC_Stage_Screen__c/fields/FEC_Case_Stage__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tên Stage hiện tại</description>
    <label>Case Stage</label>
    <referenceTo>FEC_Case_Stage__c</referenceTo>
    <relationshipLabel>Stage Screens</relationshipLabel>
    <relationshipName>Stage_Screens</relationshipName>
    <type>Lookup</type>
</CustomField>