force-app/main/default/objects/FEC_Stage_Screen__c/fields/FEC_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Code__c</fullName>
    <description>Mã định danh của Stage Screen</description>
    <externalId>true</externalId>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>