force-app/main/default/objects/FEC_Stage_Screen__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FEC_Case_Stage__c</columns>
    <columns>FEC_Active__c</columns>
    <columns>FEC_Action_Button__c</columns>
    <columns>FEC_Code__c</columns>
    <columns>FEC_User_Group__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Stage Screens</label>
</ListView>